<resources>
    <string name="app_name">SWIF</string>
    <string name="Notice">공지사항</string>
    <string name="Search">검색</string>
    <string name="name">제목을 입력하세요.</string>
    <string name="write_1">글쓰기</string>
    <string name="write_2">내용을 입력하세요.</string>
    <string name="comment">댓글을 입력하세요.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="change">change</string>
    <string name="please_grant_permission">권한을 허용해주세요.</string>
    <!-- TODO: Remove or change this placeholder text -->





    <string name="No_network">NO NETWORK!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="post_title">Post Title…</string>
    <string name="post_description">Post Description</string>
    <string name="submit_text">Submit</string>
    <string name="firstName">First name</string>
    <string name="last_name">Last Name</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>


    <string name="title_activity_routine">Routine</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Challenge">Challenge</string>
    <string name="welcomeText">Set your Goal! and Make it happen</string>
    <string name="my_notes">Together, Better</string>
    <string name="note_title">글 제목</string>
    <string name="type_in_here">당신의 루틴을 입력하세요 ...</string>
    <string name="note_subtitle">소제목</string>
</resources>