<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".MainActivity">



    <ImageView
        android:id="@+id/write_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/logo" />

    <TextView
        android:layout_gravity="center"
        android:id="@+id/some_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="19dp"
        android:fontFamily="@font/roboto"
        android:gravity="center|top"
        android:text="@string/write_1"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="#B3000000"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="388dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="21dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/border2"
                android:fontFamily="@font/roboto"
                android:hint="@string/name"
                android:paddingLeft="15dp"
                android:paddingTop="17dp"
                android:paddingRight="7dp"
                android:paddingBottom="17dp"
                android:inputType="text"
                android:importantForAutofill="no"
                android:textSize="14sp">


            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="466dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="-1dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/border2"
                android:fontFamily="@font/roboto"
                android:hint="@string/write_2"
                android:paddingLeft="15dp"
                android:paddingBottom="420dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:inputType="text"
                android:importantForAutofill="no"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/rb"
                android:text="사진 추가"
                android:textColor="#000000"
                android:textSize="16dp"></TextView>

            <ImageButton
                android:src="@drawable/add_pic_bg"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="12dp"
                android:background="#33D9D9D9"
                >

            </ImageButton>

            <Button
                android:layout_width="318dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:layout_marginTop="33dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"
                android:text="글쓰기"
                android:fontFamily="@font/roboto_b"
                android:textStyle="bold"
                android:textColor="#fff"
                android:textSize="20sp" />




        </LinearLayout>
    </ScrollView>



    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/nav_alarm"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/nav_alarm"/>

        <ImageButton
            android:id="@+id/nav_rank"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/nav_rank"/>

        <ImageButton
            android:id="@+id/nav_home"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/nav_home" />

        <ImageButton
            android:id="@+id/nav_post"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/nav_post" />

        <ImageButton
            android:id="@+id/nav_menu"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/nav_menu" />


    </LinearLayout>


</LinearLayout>
